---
title: PawPal+ Final Class Diagram
---
classDiagram
    direction TB

    class Task {
        +str task_name
        +str category
        +int duration
        +str frequency
        +bool required
        +bool completed
        +str start_time
        +date due_date
        +edit_task(task_name, category, duration, frequency)
        +mark_required()
        +mark_completed() Task
        +get_task_details() str
    }

    class Pet {
        +str name
        +str species
        +int age
        +str notes
        +list tasks
        +add_task(task)
        +remove_task(task_name)
        +update_info(name, species, age, notes)
        +get_profile() str
    }

    class Owner {
        +str name
        +int available_time
        +list preferences
        +list pets
        +add_pet(pet)
        +remove_pet(pet_name)
        +set_preferences(preferences)
        +update_available_time(minutes)
        +get_all_tasks() list
        +view_tasks()
    }

    class Scheduler {
        +Owner owner
        +list generated_plan
        +add_task(pet_name, task)
        +remove_task(pet_name, task_name)
        +generate_plan() list
        +complete_task(pet_name, task_name)
        +detect_conflicts() list
        +sort_by_time() list
        +filter_tasks(pet_name, completed) list
        +explain_plan()
    }

    Owner "1" *-- "1..*" Pet : owns
    Pet "1" *-- "0..*" Task : has
    Scheduler "1" --> "1" Owner : schedules for
    Task ..> Task : mark_completed() creates next occurrence
